support cypress, add alt icon for Prettier, fix some deprecated code